ocaml/testsuite/tests/templates/basic/bad_arg_intf.mli
type t

val empty : t
val append : t -> t -> [ `Banana ]
